# resistify

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  Dockerfile  FLS2.fa  README.md  Snakefile  benchmark.sh  coconat_strip.py  download_dbs.sh  download_models.sh  environment.yml  nlrexpress.py  pyproject.toml  refplantnlr_sample.fa  resistify.py  sample.fasta  setup.py
.devcontainer/: Dockerfile  devcontainer.json  env.yaml  local.yml
.github/workflows/: check_version.yaml
FLS2/: annotations.tsv  domains.tsv  motifs.tsv  prr.fasta  results.tsv
assets/: diagram.txt  example.ipynb  resistify.ipynb  test_nlr.sh  test_prr.sh
data/: cjid.hmm  nlrdb.hmm
dm/: annotations.tsv  domains.tsv  motifs.tsv  results.tsv
dm_prr/: annotations.tsv  domains.tsv  motifs.tsv  prr.fasta  results.tsv
models/: MHD.ubj  MHD_meta.json  lrr_meta.json
refplantnlr/: annotations.tsv  coconat.tsv  domains.tsv  motifs.tsv  nbarc.fasta  nlr.fasta  results.tsv
resistify/: _loguru.py  annotations.py  check_dependencies.py  cli.py  coconat.py  download_models.py  draw.py  hmmsearch.py  logging_setup.py  main.py  nlr.py  nlrexpress.py  prr.py  resistify.py  tmbed.py  utility.py
resistify/data/: crfModel  mada.hmm  model_paths.json  nlrdb.hmm  prrdb.hmm  rlkdb.hmm
resistify/tmbed/: embed.py  model.py  tmbed.py  utils.py  viterbi.py
scripts/: benchmark.sh  get_interproscan.sh  print_model_stats.py
src/: hmmsearch.py
src/resistify/: annotation.py  coconat.py  console.py  device.py  esm.py  hmmer.py  main.py  nlr_esm.py  nlrexpress.py  output.py  parse_fasta.py  progress.py  tmbed.py  ultrafast.py
src/resistify/data/: db.hmm  nlr.hmm  rlp.hmm
test/: broken.fa  zar1.fa
testing/: testing.fa  zar1.fa
tests/: some_nlrs.fa  test.sh  test_resistify.py  uvr8.fa
tests/data/: fls2.fa  zar1.fa
tests/data/nlr_coconat_expected/: nlr.fasta  results.tsv
tests/data/nlr_expected/: domains.tsv  motifs.tsv
training/: cc_fine_tune.py  cc_train.ipynb  convert_e5.py  data.py  evaluate_tmbed.py  features.py  lrr_train.ipynb  tm_train.ipynb  tmbed.py  train.py
training/data/: LxxLxL.labels  cc.fasta  cc.labels  extEDVID.labels  lrr.fasta  lrr.labels  lrrpredictor_training.csv  motifs.tsv  nbs.fasta  nlrexpress.fasta  tmbed-helix.fa  tmbed.csv
(+36 files in other folders)
