[project]
name = "resistify"
version = "2.0.0"
dependencies = [
    "pyhmmer>=0.12.0",
    "scikit-learn>=0.24.2",
    "svg-py>=1.9.1",
    "numpy>=2.3.2",
    "fair-esm",
    "torch",
    "transformers",
    "xgboost>=3.2.0",
    "einops>=0.8.2",
    "sentencepiece>=0.2.1",
]
authors = [
  { name="Moray Smith", email="moraysmith98@gmail.com" },
]
description = "A resistance gene annotation tool"
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
resistify = "resistify.main:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
