[project]
name = "resistify"
version = "2.0.2"
dependencies = [
    "pyhmmer",
    "svg-py",
    "scikit-learn",
    "tqdm",
    "numpy",
    "fair-esm",
    "torch",
    "transformers",
    "xgboost",
    "einops",
    "sentencepiece",
]
authors = [
  { name="Moray Smith", email="moraysmith98@gmail.com" },
]
description = "A resistance gene annotation tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
resistify = "resistify.main:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.11.0"]
build-backend = "uv_build"
