[project]
name = "resistify"
version = "2.1.0"
dependencies = [
    "pyhmmer",
    "svg-py",
    "scikit-learn",
    "tqdm",
    "numpy",
    "fair-esm",
    "torch",
    "transformers",
    "xgboost",
    "einops",
    "sentencepiece",
    "tiktoken", # rostlab requires
    "protobuf", # rostlab requires
]
authors = [
  { name="Moray Smith", email="moraysmith98@gmail.com" },
]
description = "A resistance gene annotation tool"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
resistify = "resistify.main:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.11.0"]
build-backend = "uv_build"
